Css fixed. Set canvas in wrapper and put the button in a overlay.  z-index values appers to lock screen and inputfields with z-index due to div overlaying the input fields

--- a/RouteLister2/src/RouteLister2/wwwroot/css/custom.css
+++ b/RouteLister2/src/RouteLister2/wwwroot/css/custom.css
@@ -22,23 +22,49 @@
 /*ADMIN GUI END*/
 
 /* GOOGLE MAPS */
-html, body, #map_canvas {
+/*html, body, #map_canvas {
     width: 100%;
     /*height: 100%;*/
     /*margin-top: 15px;*/
     /*padding-left: 0!important;
-    padding-right:  0!important;*/
-}
-#map_canvas {
+    padding-right:  0!important;
+}*/
+/*#map_canvas {
      /*width: 100%;*/
     /*z-index:-1;*/
-    float: left;
+    /*float: left;
     padding-right: 0px!important;
     padding-left: 0px!important;
     position: absolute;
     height:93vh;
     overflow: visible!important;
+}*/
+html, body, #map_canvas {
+    width: 100%;
+    /*/*height: 100%;
+    margin-top: 15px;*/
+    padding-left: 0!important;
+    padding-right:  0!important;
 }
+#map_canvas {
+    position: relative;
+    height:95vh;
+}
+.sidenav {
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    z-index: 1;
+    width: 0;
+    position: fixed;
+    top: 50px;
+    right: -1px;
+    overflow: hidden !important;
+    transition: 0.5s;
+    background: rgba(255,255,255,0.6);
+
+}
+#canvas-wrap { position:relative } /* Make this a positioned parent */
+#overlay     { position:absolute; top:0px; right:50px; }
 .pad-top-10{
     padding-top: 10px;
 }
@@ -115,19 +141,7 @@ html, body, #map_canvas {
    }
  }
 
- .sidenav {
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
-    /*z-index: 1;*/
-    width: 0;
-    position: absolute;
-    top: 50px;
-    right: -1px;
-    overflow: hidden !important;
-    transition: 0.5s;
-    background: rgba(255,255,255,0.6);
 
-}
  
  /* GOOGLE MAPS END */
 
